tijo-bmi, wstepna zmiana organizacji kodu w aplikacji